[somfytahoma] implemented code review suggestions
Signed-off-by: Ondrej Pecta <opecta@gmail.com>